[metadata]
# Mostafa Hassanzadeh:
name = Metering-Project
version = 0.0.1
url = https://github.com/MostafaHassanzadeh/Metering
author = Mostafa Hassanzadeh And Hamidreza Miryazdi
author_email = author@example.com
classifiers =
    Programming Language :: Python :: 3.9.1
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.rst
long_description_content_type = text/markdown

[options]
python_requires = >=3.9.1